[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/io_method/scenes/edit_input_popup/edit_input_popup.gd" type="Script" id=1]

[node name="Popup" type="WindowDialog"]
margin_right = 340.0
margin_bottom = 124.0
window_title = "Input Methods"
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_right = 240.0
margin_bottom = 14.0
text = "Activation method"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 20.0
margin_top = 30.0
margin_right = 320.0
margin_bottom = 54.0

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 10.0
margin_top = 70.0
margin_right = 240.0
margin_bottom = 84.0
text = "Deactivation method"

[node name="LineEdit2" type="LineEdit" parent="."]
visible = false
margin_left = 20.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 124.0

[node name="OkButton" type="Button" parent="."]
margin_left = 270.0
margin_top = 80.0
margin_right = 320.0
margin_bottom = 110.0
text = "Ok"
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="LineEdit2" to="." method="_on_LineEdit2_text_changed"]
[connection signal="pressed" from="OkButton" to="." method="_on_OkButton_pressed"]
